--------------------------------------------------------------------------------
Fusion_SQL 1.0.0.0 - December 25th, 2003
--------------------------------------------------------------------------------
- Fixed: Guild member list doesn't show member without login. [Michen]
- Modify: SavePet. [Michen]
- Modify: Get NowLoginID,NowCharaID,NowPetID from DB. [Michen]
- Fixed: Muti party save bug. [Michen]
- Fixed: When user disconnect, can't login again. [Michen]
- Fixed: Party Data read error. [Michen]

--------------------------------------------------------------------------------
Fusion_SQL 1.0.0.0 - December 24th, 2003
--------------------------------------------------------------------------------
- Added: MySQL SUPPORT, all MySQL Function in SQLData.pas, use UseSQL=1 to open
         it. [Michen]
--------------------------------------------------------------------------------